--- a/src/index.html
+++ b/src/index.html
@@ -24,21 +24,26 @@
     <section id="important" class="container">
         <h2>Das ist mir wichtig</h2>
         <ul>
-            <li>Ich erkenne an, dass jeder Mensch ein physisches, emotionales und intellektuelles Individuum ist, mit seiner
+            <li>Ich erkenne an, dass jeder Mensch ein physisches, emotionales und intellektuelles Individuum ist, mit
+                seiner
                 Geschichte, seinen Prägungen, seinen Sichtweisen und seinen Gedanken.</li>
             <li>Ich glaube daran, dass alle Menschen nach Veränderung und Wachstum streben.</li>
-            <li>Ich erkenne an, dass jeder Mensch ein physisches, emotionales und intellektuelles Individuum ist, mit seiner
+            <li>Ich erkenne an, dass jeder Mensch ein physisches, emotionales und intellektuelles Individuum ist, mit
+                seiner
                 Geschichte, seinen Prägungen, seinen Sichtweisen und seinen Gedanken.</li>
             <li>Ich unterstütze und fördere den Prozess des lebenslangen und lebendigen Lernens.</li>
-            <li>Meine Arbeit beruht auf Respekt meinen Klientinnen gegenüber. Ich respektiere sie mit ihren Voraussetzungen,
+            <li>Meine Arbeit beruht auf Respekt meinen Klientinnen gegenüber. Ich respektiere sie mit ihren
+                Voraussetzungen,
                 ihrer Rasse, Glauben, Bildung und Sexualität.</li>
             <li>Ich anerkenne ihre und meine Grenzen.</li>
             <li>Den Klientinnen begegne ich mit Empathie, Aufmerksamkeit und Wertschätzung.</li>
             <li>Verschwiegenheit gegenüber Drittpersonen ist für mich eine Selbstverständlichkeit.</li>
-            <li>Ich mache möglichst keine Bewertungen, bin mir aber bewusst, dass ich immer wieder bewerte. Jeder Entscheidung
+            <li>Ich mache möglichst keine Bewertungen, bin mir aber bewusst, dass ich immer wieder bewerte. Jeder
+                Entscheidung
                 liegt eine Bewertung zugrunde.</li>
             <li>Ich arbeite und bin authentisch. Dabei bin ich mir meiner selektiven Authentizität bewusst.</li>
-            <li>Ich deklariere meine Haltung und Arbeitsweise, reflektiere sie regelmässig und erbete mir Feedbacks um meine
+            <li>Ich deklariere meine Haltung und Arbeitsweise, reflektiere sie regelmässig und erbete mir Feedbacks um
+                meine
                 Wirkung zu überprüfen.
             </li>
             <li>Ich kommuniziere verständlich, offen und ehrlich. Ich respektiere aber auch hier meine Selektivität.</li>
@@ -51,23 +56,29 @@
             <img id="profile" />
             <p>1959 bin ich in Chur als 4. von fünf Kindern auf die Welt gekommen.
                 <br />Über 25 Jahre wohnte ich im Unterland und zog 2009 wieder in meine alte Heimat Graubünden.
-                <br />Ich bin diplomierte Supervisorin, Coach und Organisationsentwicklerin und habe diese Ausbildung am
+                <br />Ich bin diplomierte Supervisorin, Coach und Organisationsentwicklerin und habe diese Ausbildung
+                am
                 WPI (Wirtschafts-Pädagogischen-Institut) in Morschach von 2007-2010 absolviert.
                 <br />
-                <br />Durch meinen primär erlernten Beruf der Pflegefachfrau und der Weiterbildung zur dipl. Anästhesiefachfrau,
-                den ich teilzeitmässig immer noch ausübe, liegt mein Spezialgebiet vor allem im akutmedizinischen Bereich.
+                <br />Durch meinen primär erlernten Beruf der Pflegefachfrau und der Weiterbildung zur dipl.
+                Anästhesiefachfrau,
+                den ich teilzeitmässig immer noch ausübe, liegt mein Spezialgebiet vor allem im akutmedizinischen
+                Bereich.
                 <br />Selbstverständlich arbeite ich auch in und mit anderen Berufsgruppen.
                 <br />Ich habe jahrelange Erfahrung als Teammitglied, als Abteilungsleiterin und Ausbilderin.
                 <br />Ich besitze den eidg. FA als Ausbilderin auf TZI Basis.
                 <br />
-                <br />Als Mutter von 3 erwachsenen Söhnen und ehemaligen Bäuerin die immer auch im Beruf tätig war, konnte
+                <br />Als Mutter von 3 erwachsenen Söhnen und ehemaligen Bäuerin die immer auch im Beruf tätig war,
+                konnte
                 ich mir vielfältige Sozialkompetenzen aneignen.
-                <br />Durch berufliche und private Ereignisse erlangte ich verschiedene Kompetenzen und Wissen in der Begleitung
+                <br />Durch berufliche und private Ereignisse erlangte ich verschiedene Kompetenzen und Wissen in der
+                Begleitung
                 von Menschen in schwierigen Lebensphasen.
                 <br />
                 <br />Ich unterstützte sie während belastenden und einschneidenden körperlichen Krankheiten.
                 <br />Krankheiten dessen Erholung absehbar waren aber auch mit tödlichem Verlauf.
-                <br />Zu dem besitze ich Erfahrung mit Angehörigen und Betroffenen von psychischen Erkrankungen wie Schizophrenie
+                <br />Zu dem besitze ich Erfahrung mit Angehörigen und Betroffenen von psychischen Erkrankungen wie
+                Schizophrenie
                 oder Burn-out.</p>
         </div>
     </section>
@@ -96,7 +107,7 @@
         <small>
             <p>© <span id="year"></span> Heidi Bättig-Näf
                 <br />
-                 Designed and developed by
+                Designed and developed by
                 <a href="mailto:coding.steff@gmail.com">coding.steff</a>
             </p>
         </small>
