--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,9 @@
                 <br />Über 25 Jahre wohnte ich im Unterland und zog 2009 wieder in meine alte Heimat Graubünden.
                 <br />Ich bin diplomierte Supervisorin, Coach und Organisationsentwicklerin und habe diese Ausbildung
                 am WPI (Wirtschafts-Pädagogischen-Institut) in Morschach von 2007-2010 absolviert.
-      
+            </p>
+            <a id="whoami-more-button" href="javascript:void(0);">Mehr anzeigen...</a>
+            <p id="whoami-more">
                 Durch meinen primär erlernten Beruf der Pflegefachfrau und der Weiterbildung zur dipl.
                 Anästhesiefachfrau, den ich teilzeitmässig immer noch ausübe, liegt mein Spezialgebiet vor allem im
                 akutmedizinischen Bereich.
