--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#1E90FF">
-    <meta name="description" content="Beratung und Begleitung von Einzelpersonen Teams Organisationen, Supervision, Coaching">
+    <meta name="description"
+          content="Beratung und Begleitung von Einzelpersonen Teams Organisationen, Supervision, Coaching">
 
     <title>Heidi Bättig - Beratungen und Begleitungen</title>
 </head>
@@ -41,7 +42,9 @@
             <li>Ich deklariere meine Haltung und Arbeitsweise, reflektiere sie regelmässig und erbete mir Feedbacks um
                 meine Wirkung zu überprüfen.
             </li>
-            <li>Ich kommuniziere verständlich, offen und ehrlich. Ich respektiere aber auch hier meine Selektivität.</li>
+            <li>Ich kommuniziere verständlich, offen und ehrlich.
+                Ich respektiere aber auch hier meine Selektivität.
+            </li>
         </ul>
     </section>
 
@@ -93,7 +96,8 @@
     </section>
 
     <section id="location">
-        <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAoGWA_K22snVMFFF6hX6SIHlPAHTOft00&q=Pfaffengasse+6+Igis"></iframe>
+        <iframe
+                src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAoGWA_K22snVMFFF6hX6SIHlPAHTOft00&q=Pfaffengasse+6+Igis"></iframe>
     </section>
 
     <footer id="footer" class="container text-center">
