profile foto added

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
                 <br />Ich bin diplomierte Supervisorin, Coach und Organisationsentwicklerin und habe diese Ausbildung
                 am WPI (Wirtschafts-Pädagogischen-Institut) in Morschach von 2007-2010 absolviert.
             </p>
-            <a id="whoami-more-button" href="javascript:void(0);">Mehr anzeigen...</a>
+            <a id="whoami-more-button" href="javascript:void(0);">Mehr von mir anzeigen...</a>
             <p id="whoami-more">
                 Durch meinen primär erlernten Beruf der Pflegefachfrau und der Weiterbildung zur dipl.
                 Anästhesiefachfrau, den ich teilzeitmässig immer noch ausübe, liegt mein Spezialgebiet vor allem im
@@ -79,8 +79,10 @@
         </div>
     </section>
 
+    <hr>
+
     <section id="contact" class="container text-center">
-        <hr>
+        
         <h2>Kontakt</h2>
         <p>Heidi Bättig-Näf<br> Pfaffengasse 6<br> 7206 Igis </p>
         <div id="contactdetails" class="container">
