siema carousel for importants

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 
     <section id="important" class="container">
         <h2>Das ist mir wichtig</h2>
-        <ul>
+        <ul class="siema">
             <li>Ich erkenne an, dass jeder Mensch ein physisches, emotionales und intellektuelles Individuum ist, mit
                 seiner Geschichte, seinen Prägungen, seinen Sichtweisen und seinen Gedanken.</li>
             <li>Ich glaube daran, dass alle Menschen nach Veränderung und Wachstum streben.</li>
@@ -46,6 +46,10 @@
                 Ich respektiere aber auch hier meine Selektivität.
             </li>
         </ul>
+        <div class="dots">
+            <span class="dot carousel-prev"></span>
+            <span class="dot carousel-next"></span>
+        </div>
     </section>
 
     <section id="whoami" class="container">
@@ -82,7 +86,6 @@
     <hr>
 
     <section id="contact" class="container text-center">
-        
         <h2>Kontakt</h2>
         <p>Heidi Bättig-Näf<br> Pfaffengasse 6<br> 7206 Igis </p>
         <div id="contactdetails" class="container">
